fix: card gap and invest card bg

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -196,6 +196,10 @@ html {
   fill: #ff00ff;
 }
 
+#invest_ellipse {
+  height: 300px;
+}
+
 #invest {
   position: absolute;
   width: 316px;
